--- a/rca/static_src/sass/components/_proposition-statement.scss
+++ b/rca/static_src/sass/components/_proposition-statement.scss
@@ -3,17 +3,33 @@
 
     &__introduction {
         @include font-size(xxxxl);
-        grid-column: 3 / span 3;
         padding-right: ($gutter * 2);
         color: currentColor;
         line-height: $line-height-large;
-        margin-bottom: ($gutter * 3);
+        margin-bottom: $gutter;
+        grid-column: 1 / span 2;
+
+        @include media-query(medium) {
+            margin-bottom: ($gutter * 3);
+        }
+
+        @include media-query(large) {
+            grid-column: 3 / span 3;
+        }
     }
 
     &__link {
         grid-row: 2;
-        grid-column: 5 / span 1;
+        grid-column: 1 / span 1;
         margin-bottom: ($gutter * 2);
+
+        @include media-query(medium) {
+            grid-column: 2 / span 1;
+        }
+
+        @include media-query(large) {
+            grid-column: 5 / span 1;
+        }
     }
 
     .bg--dark & {
