--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -52,16 +52,16 @@
 
             {% include "patterns/organisms/stat-block/stat-block.html" %}
 
-            <section class="section bg bg--light">
+            <section class="section section--top-space bg bg--light">
 
                 <div class="partnerships">
 
                     <div class="partnerships__header grid">
                         <h2 class="partnerships__heading heading heading--one">Working with the best</h2>
-                        <p class="paternships__introduction">We work with a selection of the world's most innovative organisations.</p>
+                        <p class="partnerships__introduction">We work with a selection of the world's most innovative organisations.</p>
                     </div>
-                    <div class="partnerships__carousel grid">
-                        {% include "patterns/organisms/carousel/carousel.html" %}
+                    <div class="partnerships__carousel">
+                        {% include "patterns/organisms/carousel/carousel--square.html" %}
                     </div>
 
                 </div>
