--- a/rca/project_styleguide/templates/patterns/atoms/grid-lines/grid-lines.html
+++ b/rca/project_styleguide/templates/patterns/atoms/grid-lines/grid-lines.html
@@ -1,7 +1,7 @@
 <div class="grid__lines" aria-hidden="true">
-    <div class="grid__grid-line" {{ data_tag }}><div class="grid__grid-line--left"></div></div>
+    <div class="grid__grid-line" {{ data_tag_left }}><div class="grid__grid-line--left"></div></div>
     <div class="grid__grid-line"></div>
-    <div class="grid__grid-line"></div>
+    <div class="grid__grid-line" {{ data_tag_center }}></div>
     <div class="grid__grid-line"></div>
     <div class="grid__grid-line"></div>
 </div>
