--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -45,7 +45,7 @@
 
         <main class="app__content">
 
-            {% include "patterns/atoms/grid-lines/grid-lines.html" with data_tag="data-left-edge" %}
+            {% include "patterns/atoms/grid-lines/grid-lines.html" with data_tag_left="data-left-edge" data_tag_center="data-grid-center" %}
 
             {% block content %}
                 {{ pattern_library_rendered_pattern }}
