--- a/rca/static_src/sass/components/_partnerships.scss
+++ b/rca/static_src/sass/components/_partnerships.scss
@@ -15,6 +15,7 @@
     &__heading {
         grid-column: 1 / span 2;
         margin-bottom: $gutter;
+        min-width: 0;
 
         @include media-query(medium) {
             grid-column: 1;
