--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -24,6 +24,8 @@ $color--grid-line-light: $color--white-12;
 $color--grid-line-dark: $color--black-12;
 
 $color--meta: $color--light-grey;
+$color--meta-darkbg: $color--meta;
+$color--meta-lightbg: $color--dark-grey;
 
 // --------------------------------- Fonts --------------------------------------
 
