--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/fees-and-funding.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/fees-and-funding.html
@@ -6,7 +6,7 @@
         <div class="overview grid">
             <h3 class="overview__heading heading heading--four">{{ overview.title }}</h3>
             {% for item in overview_item %}
-                <div class="overview__item">
+                <div class="overview__item {% if forloop.first %}overview__item--first{% endif %}">
                     <h4 class="overview__sub-heading heading heading--five">{{ item.title }}</h4>
                     {% if item.introduction %}
                         <p class="overview__introduction introduction">{{ item.introduction }}</p>
@@ -29,17 +29,46 @@
                         {% endfor %}
                     </div>
                 </div>
-                {% endfor %}
-                <div class="overview__item">
-                    <h4 class="overview__sub-heading heading heading--five">Payments</h4>
-                    <p class="overview__introduction introduction">Tuition fees are due on the first day of the academic year and students are sent an invoice in August. Payments can be made in advance, on registration or in installments.</p>
-                    <div class="overview__item-action">
-                        <a class="link link--secondary link--link" href="#">
-                            <span class="link__label">See our payments page for full information</span>
-                            <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
-                        </a>
+                {% if forloop.first %}
+                    <div class="disclaimer">
+                        <div class="disclaimer__container body body--support">
+                            <b>All MA programmes</b>
+                            <p>Home, EU and International students who have completed a Graduate Diploma at the College and progress immediately onto an RCA Master's programme will be eligible for a £1,000 discount on tuition fees for a 45 week MA/MRes, £1,000 per year for a 2-year MA and £1,500 for a 15-month MA.</p>
+
+                            <b>All MA/MSc programmes</b>
+                            <p>Home, EU and International students who have completed a Graduate Diploma at the College and progress immediately onto an RCA Master's programme will be eligible for a £1,000 per year for a 2-year MA.</p>
+
+                            <b>All MRes programmes</b>
+                            <p>Home, EU and International students who have completed a Graduate Diploma at the College and progress immediately onto an RCA Master's programme will be eligible for a £1,000 discount on tuition fees for a 45 week MA/MRes.</p>
+
+                            <b>All MPhil and PhD programmes</b>
+                            <p>Full-time Home, EU and International students who have completed a Master’s degree at the College will be eligible for a £1,000 discount on tuition fees for up to three years of study, when starting a Research degree within five years of graduation.</p>
+
+                            <b>Plus for individual programmes</b>
+
+                            <b>Innovation Design Engineering programme</b>
+
+                            <p>Imperial fees are subject to an inflationary uplift, calculated from the RPI for April 2020 and may vary slightly from the value published here; exact fees are to be confirmed in June 2020. </p>
+
+                            <b>Global Innovation Design programme</b>
+
+                            <p>Imperial fees are subject to an inflationary uplift, calculated from the RPI for April 2020 and may vary slightly from the value published here; exact fees are to be confirmed in June 2020. </p>
+
+                            <p>GID students are subject to a £2,000 supplementary fee (included in the above details) due to the higher costs of delivering the programme</p>
+                        </div>
                     </div>
+                {% endif %}
+            {% endfor %}
+            <div class="overview__item">
+                <h4 class="overview__sub-heading heading heading--five">Payments</h4>
+                <p class="overview__introduction introduction">Tuition fees are due on the first day of the academic year and students are sent an invoice in August. Payments can be made in advance, on registration or in installments.</p>
+                <div class="overview__item-action">
+                    <a class="link link--secondary link--link" href="#">
+                        <span class="link__label">See our payments page for full information</span>
+                        <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
+                    </a>
                 </div>
+            </div>
         </div>
 
         <div class="overview grid">
@@ -79,34 +108,6 @@ Please note the application dates listed, as they can vary.</p>
                         <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
                     </a>
                 </div>
-            </div>
-        </div>
-
-        <div class="disclaimer grid">
-            <div class="disclaimer__container body body--support">
-                <b>All MA programmes</b>
-                <p>Home, EU and International students who have completed a Graduate Diploma at the College and progress immediately onto an RCA Master's programme will be eligible for a £1,000 discount on tuition fees for a 45 week MA/MRes, £1,000 per year for a 2-year MA and £1,500 for a 15-month MA.</p>
-
-                <b>All MA/MSc programmes</b>
-                <p>Home, EU and International students who have completed a Graduate Diploma at the College and progress immediately onto an RCA Master's programme will be eligible for a £1,000 per year for a 2-year MA.</p>
-
-                <b>All MRes programmes</b>
-                <p>Home, EU and International students who have completed a Graduate Diploma at the College and progress immediately onto an RCA Master's programme will be eligible for a £1,000 discount on tuition fees for a 45 week MA/MRes.</p>
-
-                <b>All MPhil and PhD programmes</b>
-                <p>Full-time Home, EU and International students who have completed a Master’s degree at the College will be eligible for a £1,000 discount on tuition fees for up to three years of study, when starting a Research degree within five years of graduation.</p>
-
-                <b>Plus for individual programmes</b>
-
-                <b>Innovation Design Engineering programme</b>
-
-                <p>Imperial fees are subject to an inflationary uplift, calculated from the RPI for April 2020 and may vary slightly from the value published here; exact fees are to be confirmed in June 2020. </p>
-
-                <b>Global Innovation Design programme</b>
-
-                <p>Imperial fees are subject to an inflationary uplift, calculated from the RPI for April 2020 and may vary slightly from the value published here; exact fees are to be confirmed in June 2020. </p>
-
-                <p>GID students are subject to a £2,000 supplementary fee (included in the above details) due to the higher costs of delivering the programme</p>
             </div>
         </div>
 
