--- a/rca/static_src/sass/components/_overview.scss
+++ b/rca/static_src/sass/components/_overview.scss
@@ -22,6 +22,14 @@
             grid-column: 3 / span 3;
             margin-bottom: ($gutter * 4);
         }
+
+        &--first {
+            margin-bottom: $gutter;
+
+            @include media-query(medium) {
+                margin-bottom: ($gutter * 1.5);
+            }
+        }
     }
 
     &__item-action {
