Hero parallax and scroll animation

--- a/rca/static_src/sass/components/_hero-action-pane.scss
+++ b/rca/static_src/sass/components/_hero-action-pane.scss
@@ -1,4 +1,5 @@
 .hero-action-pane {
+    @include z-index(under);
     $root: &;
     $hero-action-pane-height-small: 110px;
     $hero-action-pane-height-medium: 160px;
