--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -8,14 +8,14 @@
         <meta name="description" content="{% if page.search_description %}{{ page.search_description }}{% else %}{{ page.listing_summary }}{% endif %}" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link rel="apple-touch-icon" sizes="180x180" href="/static/images/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/static/images/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon-16x16.png">
-        <link rel="manifest" href="/static/images/site.webmanifest">
-        <link rel="mask-icon" href="/static/images/safari-pinned-tab.svg" color="#000000">
-        <link rel="shortcut icon" href="/static/images/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static "images/apple-touch-icon.png" %}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static "images/favicon-32x32.png" %}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static "images/favicon-16x16.png" %}">
+        <link rel="manifest" href="{% static "images/site.webmanifest" %}">
+        <link rel="mask-icon" href="{% static "images/safari-pinned-tab.svg" %}" color="#000000">
+        <link rel="shortcut icon" href="{% static "images/favicon.ico" %}">
         <meta name="msapplication-TileColor" content="#000000">
-        <meta name="msapplication-config" content="/static/images/browserconfig.xml">
+        <meta name="msapplication-config" content="{% static "images/browserconfig.xml" %}">
         <meta name="theme-color" content="#000000">
 
         {% comment %}
