--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.html
@@ -8,11 +8,11 @@
     </div>
     {% if page.pathway_blocks %}
         {% include "patterns/molecules/heading-with-text/heading-with-text.html" with heading='Pathways' subheading=page.pathways_summary body=page.pathways_information %}
-        {% include "patterns/organisms/accordion-block/accordion-block.html" with accordions=page.pathway_blocks %}
+        {% include "patterns/organisms/accordion-block/accordion-block.html" with accordions=page.pathway_blocks title=false %}
     {% endif %}
 
     {% if page.what_you_will_cover_blocks %}
-        {% include "patterns/organisms/accordion-block/accordion-block.html" with accordions=page.what_you_will_cover_blocks title='What you\'ll cover'%}
+        {% include "patterns/organisms/accordion-block/accordion-block.html" with accordions=page.what_you_will_cover_blocks title='What you\'ll cover' %}
     {% endif %}
 </section>
 
