Moving programme type onto same line as title on mobile

--- a/rca/static_src/sass/components/_related-content.scss
+++ b/rca/static_src/sass/components/_related-content.scss
@@ -55,6 +55,13 @@
     }
 
     &__meta {
+        display: flex;
+        flex-direction: row;
+
+        @include media-query(medium) {
+            flex-direction: column;
+        }
+
         @include media-query(large) {
             grid-column: 2 / span 1;
         }
@@ -100,6 +107,12 @@
 
     &__title {
         margin-bottom: ($gutter / 4);
+        margin-right: ($gutter / 4);
+
+        @include media-query(medium) {
+            margin-right: 0;
+        }
+
     }
 
     &__degree {
