--- a/rca/static_src/sass/components/_hero.scss
+++ b/rca/static_src/sass/components/_hero.scss
@@ -18,6 +18,16 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        min-height: 340px;
+
+        @include media-query(medium) {
+            min-height: 450px;
+        }
+
+        @include media-query(large) {
+            min-height: 575px;
+        }
+
     }
 
     &__scroll {
