--- a/rca/project_styleguide/templates/patterns/molecules/steps/steps.html
+++ b/rca/project_styleguide/templates/patterns/molecules/steps/steps.html
@@ -1,34 +1,24 @@
 <div class="steps grid">
-    <h4 class="steps__heading heading heading--five">Before you begin</h4>
+    <h4 class="steps__heading heading heading--five">{{ title }}</h4>
     <div class="steps__content">
-        <div class="step-item">
-            <div class="step-item__number">1.</div>
-            <div class="step-item__content">
-                <h5 class="step-item__heading body body--one">Make sure you have read the programme requirements</h5>
-                <a class="step-item__link link link--secondary link--link" href="#">
-                    <span class="link__label">See programme requirements</span>
-                    <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
-                </a>
-            </div>
-        </div>
-        <div class="step-item">
-            <div class="step-item__number">2.</div>
-            <div class="step-item__content">
-                <h5 class="step-item__heading body body--one">Check you have all the information we'll need you to supply</h5>
-                <a class="step-item__link link link--secondary link--link" href="#">
-                    <span class="link__label">See what documents you need</span>
-                    <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
-                </a>
-            </div>
-        </div>
-        <div class="step-item">
-            <div class="step-item__number">3.</div>
-            <div class="step-item__content">
-                <h5 class="step-item__heading body body--one">Start your application</h5>
-            </div>
-        </div>
-        <a class="steps__action" href="#">
-            <span class="steps__action-label">Apply now via our application portal</span>
+        {% for step in steps %}
+            {% with step=step.value %}
+                <div class="step-item">
+                    <div class="step-item__number">{{ forloop.counter }}.</div>
+                    <div class="step-item__content">
+                        <h5 class="step-item__heading body body--one">{{ step.heading }}</h5>
+                        {% if step.link %}
+                            <a class="step-item__link link link--secondary link--link" href="{{ step.link.url }}">
+                                <span class="link__label">{{ step.link.title }}</span>
+                                <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
+                            </a>
+                        {% endif %}
+                    </div>
+                </div>
+            {% endwith %}
+        {% endfor %}
+        <a class="steps__action" href="{{ page.apply_cta_link }}">
+            <span class="steps__action-label">{{ page.apply_cta_text }}</span>
             <svg width="24" height="16" class="steps__action-icon"><use xlink:href="#arrow"></use></svg>
         </a>
     </div>
