5 carousel items in alumni

--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -44,7 +44,7 @@
                     </div>
 
                     <div class="alumni-stories__carousel grid">
-                        {% include "patterns/organisms/carousel/carousel.html" %}
+                        {% include "patterns/organisms/carousel/carousel.html" with carousel=alumni %}
                     </div>
                 </div>
 
